--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ createdAt = "Established : November 2022"
 address = "Adresa : Laurinská 3, Bratislava, 811 01"
 country = "Krajina : Slovenská republika"
 mail = "Mail : info@brch.sk"
-dic = "DIČ : "
+dic = "DIČ : 2121857243"
 ico = "IČO : 55 009 492"
 
 description = "brch s.r.o | AI software company"
